--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,14 @@ on:
     paths:
       - '**'
       - '!**.md'
+      - '!**.adoc'
   push:
     branches:
       - master
     paths:
       - '**'
       - '!**.md'
+      - '!**.adoc'
   schedule:
     - cron: '0 0 * * 0' # Every Sunday at midnight UTC
 
