--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -18,6 +18,7 @@ jobs:
           $dest = "c:\temp\nixos-wsl-installer.tar.gz"
           Invoke-WebRequest -Uri $url -OutFile $dest
           wsl --import NixOS .\NixOS\ $dest --version 2
+          wsl --list --all
 
       - name: Run NixOS
         run: wsl --distribution NixOS
