--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -9,12 +9,20 @@ jobs:
   build-wsl:
     runs-on: windows-latest
     steps:
-      - name: Install NixOS WSL
-        shell: cmd
-        run: |
-          curl.exe -L https://github.com/nix-community/NixOS-WSL/releases/download/21.11-d89f18a1/nixos-wsl-installer-fixed.tar.gz -o nixos-wsl-installer.tar.gz
-          wsl --import NixOS .\NixOS\ .\nixos-wsl-install.tar.gz --version 2
-          wsl --distribution NixOS
+      - name: Download NixOS distro
+        run: curl.exe -L https://github.com/nix-community/NixOS-WSL/releases/download/21.11-d89f18a1/nixos-wsl-installer-fixed.tar.gz -o nixos-wsl-installer.tar.gz
+
+      - name: Check the directory
+        run: dir
+
+      - name: Import NixOS
+        run: wsl --import NixOS .\NixOS\ .\nixos-wsl-install.tar.gz --version 2
+
+      - name: Check the directory again
+        run: dir
+
+      - name: Run NixOS
+        run: wsl --distribution NixOS
 
       # - name: Run NixOS
       #   run: wsl --distribution NixOS
