Fix home-manager configurations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,4 +102,4 @@ jobs:
         # Prevent conflict between Cachix installed by workflow and the one installed in the config
         nix-env --set-flag priority 1 cachix
         # Build and switch to home-manager env
-        nix build .#linuxGitHubActions.activationPackage; ./result/activate
+        nix build .#homeConfigurations.linuxGitHubActions.activationPackage; ./result/activate
