Add configuration for Apple Silicon macs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Build bootstrap config
         run: |
-          nix build .#darwinConfigurations.bootstrap.system
+          nix build .#darwinConfigurations.bootstrap-x86.system
 
       - name: Switch to bootstrap config
         run: |
