Change default branch to main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,14 @@ name: Build Nix environments
 on:
   pull_request:
     branches:
-      - master
+      - main
     paths:
       - '**'
       - '!**.md'
       - '!**.adoc'
   push:
     branches:
-      - master
+      - main
     paths:
       - '**'
       - '!**.md'
