--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v20
+        uses: cachix/install-nix-action@v22
         with:
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
@@ -54,20 +54,13 @@ jobs:
         run: |
           nix-env --set-flag priority 1 cachix
 
-      - name: Build bootstrap config
+      - name: Build config
         run: |
-          nix build .#darwinConfigurations.bootstrap-x86.system
+          nix build .#darwinConfigurations.githubActions.system
 
       - name: Switch to bootstrap config
         run: |
-          ./result/sw/bin/darwin-rebuild switch --flake .#bootstrap-x86
-
-      - name: Switch to gitHubActions config
-        run: |
-          . /etc/static/bashrc
-          sudo mv /etc/nix/nix.conf /etc/nix/nix.conf.backup-before-darwin
-          sudo mv /etc/zshenv /etc/zshenv.backup-before-darwin
-          darwin-rebuild switch --flake .#gitHubActions
+          ./result/sw/bin/darwin-rebuild switch --flake .#githubActions
 
       - name: If scheduled, push commit with updated sources
         if: ${{ github.event_name == 'schedule' && success() }}
@@ -86,7 +79,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Nix
-      uses: cachix/install-nix-action@v20
+      uses: cachix/install-nix-action@v22
       with:
         extra_nix_config: |
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
