--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,10 @@ jobs:
         run: |
           nix-env --set-flag priority 1 cachix
 
+      - name: Fix Sequoia nixbld users
+        run: |
+          echo -e "y\n" | curl --proto '=https' --tlsv1.2 -sSf -L https://github.com/NixOS/nix/raw/master/scripts/sequoia-nixbld-user-migration.sh | bash -
+
       - name: Build config
         run: |
           nix build .#darwinConfigurations.githubActions.system
